Fix CSS
Moved selector to not overlap with the GitHub source link in the corner.

--- a/style.css
+++ b/style.css
@@ -17,6 +17,13 @@ html {
 	color: white;
 }
 
+#octaves {
+	top: 98%;
+	position: absolute;
+	transform: translate(0%,-100%);
+	width: 100%;
+}
+
 .unselectable {
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
